[project]
name = "czudf-toolkit"
version = "0.0.1"
description = "Python toolkit for developing UDFs on the ClickZetta platform"
readme = "README.md"
requires-python = ">=3.10"
license-files = ["LICENSE"]
dependencies = []
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Topic :: Database",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities",
]

[[project.authors]]
name = "guantao.gao"
email = "guantao.gao@clickzetta.com"

[project.urls]
Homepage = "https://github.com/czudf/czudf-python-toolkit"
Repository = "https://github.com/czudf/czudf-python-toolkit"
Issues = "https://github.com/czudf/czudf-python-toolkit/issues"

[dependency-groups]
dev = ["mypy", "ruff==0.12.11", "pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "B",  # flake8-bugbear
  "C4", # flake8-comprehensions
  "UP", # pyupgrade
]
isort = { combine-as-imports = true, known-first-party = ["czudf_toolkit"] }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = true
disallow_incomplete_defs = false
disallow_untyped_defs = false
disallow_untyped_calls = false
